# cliphop

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-23-v0.3-ux.md  2026-03-25-smoke-tests.md
docs/superpowers/specs/: 2026-03-21-settings-redesign-design.md  2026-03-23-v0.3-ux-design.md  2026-03-25-smoke-tests-design.md
scripts/: build-dmg.sh  generate-icon.swift  install.sh  release.sh  setup-signing.sh
src/: clipboard.rs  config.rs  crypto.rs  history.rs  hotkey.rs  lib.rs  log.rs  macos.rs  main.rs  paste.rs  popup.rs  settings.rs  tray.rs
tests/: clipboard_integration.rs  e2e_gui.sh  smoke_usability.sh  smoke_visibility.sh
